[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Bouncy Platform Long.png" type="Texture" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/song.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/onegun.ogg" type="AudioStream" id=6]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 28.7617
height = 253.621

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
Ball = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1040.0
margin_bottom = 625.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )

[node name="BG" type="ColorRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1035.0
margin_bottom = 617.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.212448, 0.405439, 0.457031, 0.187843 )

[node name="WallContainer" type="Node" parent="." index="2"]

[node name="Wall2" type="StaticBody2D" parent="WallContainer" index="0"]

editor/display_folded = true
position = Vector2( 880.952, 495.157 )
rotation = -0.264907
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.5
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="WallContainer/Wall2" index="0"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallContainer/Wall2" index="1"]

rotation = 1.5708
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Wall7" type="StaticBody2D" parent="WallContainer" index="1"]

editor/display_folded = true
position = Vector2( 462.444, 216.865 )
rotation = -1.02983
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.5
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="WallContainer/Wall7" index="0"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallContainer/Wall7" index="1"]

rotation = 1.5708
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Wall8" type="StaticBody2D" parent="WallContainer" index="2"]

editor/display_folded = true
position = Vector2( 585.534, 221.147 )
rotation = 1.07416
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.5
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="WallContainer/Wall8" index="0"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallContainer/Wall8" index="1"]

rotation = 1.5708
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Wall4" type="StaticBody2D" parent="WallContainer" index="3"]

editor/display_folded = true
position = Vector2( 996.874, 342.897 )
rotation = -1.5708
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.5
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="WallContainer/Wall4" index="0"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallContainer/Wall4" index="1"]

rotation = 1.5708
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Wall1" type="StaticBody2D" parent="WallContainer" index="4"]

editor/display_folded = true
position = Vector2( 148.047, 491.522 )
rotation = 0.315662
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.5
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="WallContainer/Wall1" index="0"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallContainer/Wall1" index="1"]

rotation = 1.5708
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Wall5" type="StaticBody2D" parent="WallContainer" index="5"]

editor/display_folded = true
position = Vector2( 30.2087, 337.685 )
rotation = 1.5708
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.5
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="WallContainer/Wall5" index="0"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallContainer/Wall5" index="1"]

rotation = 1.5708
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Wall3" type="StaticBody2D" parent="WallContainer" index="6"]

editor/display_folded = true
position = Vector2( 397.133, 570.384 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.5
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="WallContainer/Wall3" index="0"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallContainer/Wall3" index="1"]

rotation = 1.5708
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Wall6" type="StaticBody2D" parent="WallContainer" index="7"]

editor/display_folded = true
position = Vector2( 699.667, 571.226 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.5
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="WallContainer/Wall6" index="0"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallContainer/Wall6" index="1"]

rotation = 1.5708
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="HUD" parent="." index="3" instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Drop" type="AudioStreamPlayer" parent="." index="5"]

pause_mode = 2
stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="Timer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


